OpenSLP Change Log (HEAD)
-------------------------
Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================

04/04/02 matt@caldera.com
Added patch from Arun Barboza that makes attribute compares case insensitive
as per RFC 2608

*** TAG OpenSLP-1.1.1 ***

02/22/02 matt@caldera.com
Added fix from Arun Barboza to make V1 DAAdverts use the same encoding as
the request

02/22/02 matt@caldera.com
Added patch from Arun Barboza to handle "==" V1 predicates.  This allows
OpenSLP to be useful in servicing request in Novell NetWare environments.

02/13/02 matt@caldera.com
Added PID monitoring.  Now when the process that called SLPReg() (with
SLP_REG_FLAG_WATCH_PID) dies the registration will automatically be deregistered.

01/25/2002 matt@caldera.com
Added relevant fixes from the stable branch:
   - Applied patch from Garth Bushell that fixes a problem where not enough
     memory was being allocated to hold an escaped string in SLPEscape().
   - Fixed some problems with multicast route handling code in the slpd
     startup script
   - Moved Win2000 specific defines inside #ifdef WIN32
   - Changed slpd "daemonize" code to chdir() to "/"

01/24/2002 matt@caldera.com
Changed the code in slpd_property.c to use the functions in slp_net.c and
slp_iface.c to get interface and hostname information

01/24/2002 matt@caldera.com
Moved URL parsing code to common code (slp_parse.c) and added a few network
utility functions (slp_net.c).  Modified slpd code so that DAs are contacted
via the IP address in the DAAdvert not the source address of the datagram.

*** Tag merged OpenSLP 1.0.6 ***

11/29/01 matt@caldera.com
Finished the initial addition of all the new multicast code with significant
help from Satya and Venu.
